chore: removing enzyme

--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
     "react-dom": "^0.14.8||^15.0.0||^16.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.8||^15.0.0||^16.0.0"
+    "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
+    "react-dom": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0"
   },
   "devDependencies": {
     "@economist/doc-pack": "^1.0.7",
@@ -125,11 +126,8 @@
     "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^1.0.0-beta.0",
     "chai-spies": "^0.7.1",
     "coveralls": "^2.11.9",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^2.8.0",
     "eslint-config-strict": "^8.5.1",
     "eslint-config-strict-react": "^8.0.1",
