--- a/package.json
+++ b/package.json
@@ -105,8 +105,7 @@
     "@economist/component-palette": "^1.11.0",
     "@economist/component-typography": "^3.5.0",
     "promisescript": "^1.1.0",
-    "prop-types": "^15.0.0",
-    "react-dom": "^0.14.8||^15.0.0||^16.0.0"
+    "prop-types": "^15.0.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0-0 || ^16.0.0-0",
